--- a/arts-2018-12-03.md
+++ b/arts-2018-12-03.md
@@ -1,4 +1,4 @@
-## ARTS之旅（22周）
+## ARTS之旅（22周）
 
 ### Algorithm
 
@@ -29,7 +29,7 @@ Output: 5->4->3->2->1->NULL
 
 - 复杂度分析
 
-    + 时间复杂度为 O(n), n为链表的长度
+    + 时间复杂度为 O(n), n为链表的长度
     + 空间复杂度: O(1)
 
 ---
@@ -44,8 +44,8 @@ Output: 5->4->3->2->1->NULL
 
 ### Share: Redis持久化之RDB
 
-很久之前就接触过Redis，但是一直未深入学习过。工作中也用了一段时间，但都是各种API调用罢了。上次看了
-一下`redis.conf`, 发现一个比较有趣的玩意， 然后就开始找资料看了相关的知识点，现在整理出来。
+很久之前就接触过Redis，但是一直未深入学习过。工作中也用了一段时间，但都是各种API调用罢了。上次看了
+一下`redis.conf`, 发现一个比较有趣的玩意， 然后就开始找资料看了相关的知识点，现在整理出来。
 
 ```Shell
 save 60 1000
@@ -56,11 +56,11 @@ dbfilename dump.rdb
 
 #### 什么是RDB
 
-RDB是Redis持久化的一种方式，它存储是某个时间点在内存中数据集的快照，以二进制的形式保存。 
+RDB是Redis持久化的一种方式，它存储是某个时间点在内存中数据集的快照，以二进制的形式保存。 
 
 ![redis-rdb](image/share-redis-rdb.jpeg)
 
-#### 如何创建RDB以及RDB适用场景
+#### 如何创建RDB以及RDB适用场景
 
 + 创建RDB文件的方式
 
@@ -77,18 +77,18 @@ RDB是Redis持久化的一种方式，它存储是某个时间点在内存中
 |文件比较小，容易传输到其他服务恢复数据  | 当存储当前数据集大的时候使用save命令会导致应用停顿 |
 | 相比于AOF方式，恢复数据快  |  - |
 
-+ 选择RDB方式
++ 选择RDB方式
 
-    - 应用能否接受部分数据的丢失
+    - 应用能否接受部分数据的丢失
     - save/bgsave在数据集比较大时，出现的停顿时间能否接受
 
-#### RDB工作原理简介
+#### RDB工作原理简介
 
 - save命令创建RDB的工作步骤
 
     + Redis服务停止处理客户请求，处于阻塞状态
-    + 将内存中数据集写入新的RDB文件
-    + 重命名旧的RDB文件，并且Redis服务器恢复服务
+    + 将内存中数据集写入新的RDB文件
+    + 重命名旧的RDB文件，并且Redis服务器恢复服务
 
 - bgsave命令创建RDB的工作步骤
     
@@ -103,6 +103,6 @@ RDB是Redis持久化的一种方式，它存储是某个时间点在内存中
 
 #### 参考资料
 
-- [《Redis实战》](https://book.douban.com/subject/26612779/)
+- [《Redis实战》](https://book.douban.com/subject/26612779/)
 - [Redis Persistenc](https://redis.io/topics/persistence)
 - [Redis persistence demystified](http://oldblog.antirez.com/post/redis-persistence-demystified.html)
