--- a/arts-2018-12-03.md
+++ b/arts-2018-12-03.md
@@ -74,7 +74,7 @@ RDB是Redis持久化的一种方式，它存储是某个时间点在内存中数
 |优点|缺点|  
 |---|---|
 |RDB数据文件简洁，恢复灵活，可以选择某个时间点的文件恢复   | 只能恢复最近时间点的数据，不适用于对数据敏感的应用 |   
-|文件比较小，容易传输到其他服务恢复数据  | 当存储当前数据集大的时候使用save命令会导致应用停顿 |
+|文件比较小，容易传输到其他服务恢复数据  | 当存储当前数据集大的时候使用save命令会导致应用停顿 |
 | 相比于AOF方式，恢复数据快  |  - |
 
 + 选择RDB方式
