--- a/arts-2018-12-16.md
+++ b/arts-2018-12-16.md
@@ -1,351 +1,220 @@
-## ARTS之旅（24周）
+# ARTS之旅（24周）
 
-### Algorithm
+现在主要的ARTS账务三个：
 
-#### 问题描述
+- 之前的ARTS都不没有补全;
+- 之前的ARTS没有整理迁移过来；
+- 目前TIP写的比较少，需要慢慢积累。
 
-本周做的习题是[234. Palindrome Linked List](https://leetcode.com/problems/palindrome-linked-list/)：给定一个单链表，判断其是否是回文。
+## Algorithm
 
-例1：
-<pre>
-Input: 1->2
-Output: false
-</pre>
+本周做了两个算法题，都是比较简单地。本周的算法标签以及难度：
 
-例2:
-<pre>
-Input: 1->2->2->1
-Output: true
-</pre>
+- tag： hash table
+- level：easy
 
-#### 解题思路与代码实现
+### 问题描述以及思路
 
-1. 堆栈法
+1. [217. Contains Duplicate](https://leetcode.com/problems/contains-duplicate/)：给定两个字符串s和t，包含的字符串都是小写字母。其中t是s打乱之后的字符串，并在加入了一个字符。
+请找出此字符出来。思路：开始想的是使用set方法做此题，后面想只有加入一个字符，两个字符串相减即可。
 
-遍历链表，将其值存入栈中，然后再次遍历链表时比较栈顶元素是否与链表中的值一样，不一样则不是回文，否则是。
-
-- 代码实现
+### 代码实现
 
 ```Java
-public boolean isPalindrome(ListNode head) {
-    if (null == head || null == head.next) {
-        return true;
+public char findTheDifference(String s, String t) {
+    if (null == s || null == t) {
+        return '\0';
     }
-    // loop the linked list, store its value into stack 
-    Stack<Integer> stackInt = new Stack<Integer>();
-    ListNode currNode = head;
-    while (currNode != null) {
-        stackInt.push(currNode.val);
-        currNode = currNode.next;
-    }
-    currNode = head;
-    while (currNode != null) {
-        if (stackInt.isEmpty()) {
-            return false;
-        }
-        if (stackInt.pop() != currNode.val) {
-            return false;
-        }
-        currNode = currNode.next;
-    }
-    return stackInt.isEmpty();
-}
-   
-```
-
-- 复杂度分析
-
-    + 时间复杂度为 O(n), n为链表的长度
-    + 空间复杂度: O(n)
-
-2. 快慢指针法 + 链表反转
-
-利用快慢指针法找到中间节点，然后反转右边的子链表，比对左子链表和右子链表。
-
-- 代码实现
-
-```Java
-public boolean isPalindrome(ListNode head) { 
-    if (null == head || null == head.next) {
-        return true;
-    }
-    ListNode pFast = head;
-    ListNode pSlow = head;
-    while (pFast != null && pFast.next != null) {
-        pFast = pFast.next.next;
-        pSlow = pSlow.next;
-    }
-    // odd linked list,the middle of it is  pSlow.next
-    if (pFast != null) {
-        pSlow = pSlow.next;
+    int sLen = s.length();
+    int tLen = t.length();
+    if (tLen < sLen || tLen - sLen != 1) {
+        return '\0';
     }
     
-    // reverse right list: [pSlow ...]
-    pSlow = reverseList(pSlow);
-    while (pSlow != null) {
-        if (head.val != pSlow.val) {
-            return false;
+    int diffChar = t.charAt(tLen - 1);
+    for (int i = 0; i < sLen; ++i) {
+        diffChar -= s.charAt(i);
+        diffChar += t.charAt(i);
+    }
+    return (char) diffChar;
+}
+```
+
+### 复杂度分析
+
++ 时间复杂度为 O(n), n为s的长度
++ 空间复杂度: O(1)
+
+### 问题描述以及思路
+
+2. [219. Contains Duplicate II](https://leetcode.com/problems/contains-duplicate-ii/)：给定一个整数数组arr和整数k，在arr是否存在 `arr[i]=arr[j], i != j`, 并且 `|i-j|i-j <= k`。
+
+采用hashmap，存放的格式`<arr[i], i>`, 遍历数组，处理j时，若map中已经存在，且存在 `j-i <= k`则返回 `true`;若遍历完数组仍旧没有，则返回`false`。
+
+### 代码实现
+
+```Java
+public boolean containsNearbyDuplicate(int[] nums, int k) {
+    if (null == nums || nums.length == 0 || k <= 0 || k > nums.length) {
+        return false;
+    }
+    Map<Integer, Integer> numsMap = new HashMap<Integer, Integer>();
+    int len = nums.length;
+    for (int i = 0; i < len; ++i) {
+        if (numsMap.containsKey(nums[i])) {
+            if (i - numsMap.get(nums[i]) <= k) {
+                return true;
+            }
         }
-        head = head.next;
-        pSlow = pSlow.next;
+        numsMap.put(nums[i], i);
     }
-    return true;
-}
-
-private ListNode reverseList(ListNode head) {
-    if (null == head || null == head.next) {
-        return head;
-    }
-    ListNode preNode = null;
-    while (head != null) {
-        ListNode nextNode = head.next;
-        head.next = preNode;
-        preNode = head;
-        head = nextNode;
-    }
-    return preNode;
+    return false;
 }
 ```
 
-- 复杂度分析
+## 复杂度分析
 
-    + 时间复杂度为 O(n), n为链表的长度
-    + 空间复杂度: O(1)
++ 时间复杂度为 O(n), n为array的长度
++ 空间复杂度: O(n)
 
----
+------------
 
-### Review
+##  Review
 
-本周阅读的英语文章
+最近阅读的英语文章的主题都是5小时法则，所以将其整理，分享给大家。
 
-- 来源： Medium
-- 标题：Code Review Best Practices
+### 5小时法则
 
-特别是如何评审代码以及如何处理评审意见值得学习，都需要一个open的心态。
+#### 什么是5小时法则
 
-#### 动机(Motivation)
+ 一周5小时法则，最早的来源是富兰克林那个家伙。5小时法则就是每天至少花1小时的时间来阅读或者刻意练习。
+经过不断的积累，让自己慢慢成长，达到自己的目标。
 
- 代码评审（CR）能够提高代码质量以及从团队和公司文化获得正面响应。不管是对提交者还是评审者都有易处：
-双方可以相互学习，提高代码质量、避免常见的bug或者安全问题。
+![5_h_pro](image/review_5h_1.PNG)
 
-#### 评审什么（What to review）
+### 为什么要5小时法则
 
-没有一定之规，团队成员自行决定的：
+1. 缘由
+    * 所学的知识会不断的淘汰
+    ![review_notblam](image/review_5h_2.PNG)
+    * 所处时代高学历的人越来越多，竞争更为激烈
+    ![review_notblam](image/review_5h_3.PNG)
+    * 晋升需要
+    ![review_notblam](image/review_5h_4.PNG)
 
-* 有的评审每个提交记录
-* 有的则是提供一个阀值，达到之后才会进入评审之列
+2. 很多领域大牛都使用5小时法则，下面就是例子：
 
-总之，权衡工程师的时间与代码质量。还有就是任何人都需要的，不针对层级：并不是说你是团队的资深开发者就意味着你的代码不需要评。
+    * Warren Buffett spends five to six hours per day reading five newspapers and 500 pages of corporate reports. 
+    * Bill Gates reads 50 books per year. 
+    * Mark Zuckerberg reads at least one book every two weeks. 
+    * Elon Musk grew up reading two books a day, according to his brother.
+    *  Oprah Winfrey credits books with much of her success: “Books were my pass to personal freedom.”
+    *  Arthur Blank, co-founder of Home Depot, reads two hours day. 
+    * Dan Gilbert, self-made billionaire and owner of the Cleveland Cavaliers, reads one to two hours a day.
 
-> Code reviews are classless: being the most senior person on the team does not imply that your code does not need review. 
+### 如何应用5小时法则
 
-#### 代码评审的时间点
+1. 计划要学的知识
+    * 需要完成的目标
+    * 需要学习的知识
+2. 刻意练习
+    * 对自己需要诚实的反馈，然后不断改进。
+3. 反思
+    * 消化自己所学的
+    * 散步或者与人交谈
+4. 计划学习时间，阅读、交流和观察他人都可以
+5. 问题一旦出现就去解决，切勿拖延
+6. 做实验，验证自己的方法
 
-经过代码测试、代码风格等检查之后，归并到主干之前进行评审。对于大的改动需要分多个分支，分支中有小分支，然后一个个评审之。
+### 粗浅思考
 
-#### 代码评审的准备
+读完作者的一系列文章之后，比较同意作者说法。但作者没有说明我们现在所处的时代面对太多了诱惑了，注意力被很多外物所消费，比如电视剧。注意力被割裂不成样，几乎没有任何一块整体时间来学习或者阅读。所以若要保持不变，你都需要努力学习。若你一直呆在原地，那你就会落后，会变成温水煮青蛙。总之，不要偷懒，不要找借口，做就是了。
 
-提交者有责任保证CR的容易进行，不要浪费彼此的时间：
+### 参考资料
 
-* 范围和大小：太多文件或者超过20分钟需要分多次评审
-* 为了节省评审者的时间仅提交完全自测、自我评审的。
-* 重构变化：更多的是关注程度逻辑而不是代码风格、语法、格式化的东西，这些都可以交由工具处理。
+- Why Constant Learners All Embrace the 5-Hour Rule
+- Bill Gates, Warren Buffett And Oprah All Use The 5-Hour Rule
+- The Math Behind The 5-Hour Rule: Why You Need To Learn 1 Hour Per Day Just To Stay Relevant
+- 5-Hour Rule: If you’re not spending 5 hours per week learning, you’re being irresponsible
 
-#### 提交信息两种方式
+-------------
 
-* 总结性写，在80个字以内
-* 具体也可以，第一行是邮件；后面是120字以内的具体描述
+## Tip：暂缺
 
-例子：
+--------------
 
-```Shell
-> BAD. Don't do this.
-Make compile again
+## Share：Redis中得LRU淘汰算法
 
-> Good.
-Add jcsv dependency to fix IntelliJ compilation
-```
+### 概述
 
-#### 找到相关的reviewer
+写了大量的业务代码，经常使用redis做缓存，但没有了解过，Redis作为缓存服务器时，若是设置了可用
+内存的上限，会采用什么策略进行数据的删除。Redis中两种删除数据策略：
 
-至少两位熟悉代码基的两位评审者，其中一般有一位是项目主导者或者资深工程师。
+- LRU（Least recently used)
 
-【我们现在的评审，都是不是特别熟悉项目代码的人，不过有两轮，第一轮是与小组长过，但其已经不写代码，需求评审他有参与；第二轮是与分组经理评，更多关注流程安全、数据查询的性能啥的。始终有不合理的地方，个人觉得应该需要交叉评审，就是一个需求下来，在整个需求开发人员，互评，这种更为细致，讨论更多，但缺点是耗费的时间很多，需要找到哪些地方是需要重点评审的地方，比如数据库查询、业务逻辑的地方，其他的可以不评。】
+在redis4.0之前，使用了最近最少使用,如果数据最近被访问过，那么将来访问的几率很大，主要是程序的局部性原理。
 
-#### 代码评审执行
+- LFU（Least Frequently Used）
 
-1.提交者需要与评审者沟通好时间，而评审者若发现不能评审或者评审不完需要找其他的人；
-2.评审尽可能是一个整块时间，以便评审者能够详细指明代码的改动合理性；
-3.作为评审者，是有责任让代码符合公司标准和质量；
-4.评审关注点:
+在Redis4.0引入了最不经常使用，如果一个数据在最近一段时间内使用次数很少，那么在将来一段时间内被使用的可能性
+也很小。
 
-* 目标
-    * 代码是否实现了开发者的需求（新特性、重构、修复bug等）
-    * 提问：函数和类存在的理由，设计是否合理
+设置缓存使用上限的，可以在`redis.conf`中使用 `maxmemory` 配置:`maxmemory 100mb`,注意在64bit中，默认是
+有多少使用多少，而在32位系统中，最大可用内存为 **3GB**。
 
-* 实现层面
-   * 以自己的角度，若是你去实现，你会怎么做；然后比对之；
-   * 是否添加了系统依赖；
-   * 是否进行了重复造轮子；
+### 数据淘汰策略
 
-* 可读性和风格方面
+当使用的内存到达配置的，需要选择不同策略进行处理，Redis采用如下策略进行数据淘汰：
 
-* 维护性方面
-    * 评审测试案例，看其是否有遗漏，或者没有覆盖到。
-    * 是否包含了集成测试
-    * 留下comment的
-    * 相关文档是否更新？
+- noeviction：客户端若要使用更多的内存，直接返回错误（主要是write）
+- allkeys-lru: 将最近未使用key删除
+- volatile-lru：在 expire 集合中，将最近未使用的key删除
+- allkeys-random: 随机删除key
+- volatile-random：在 expire 集合中随机删除key
+- volatile-ttl： 在 expire 集合中，优先删除ttl 最短的key
 
-总之，对于好的代码，不要吝啬夸赞；对于不同意的代码需要合理的提供建议，尊重提交者，一旦权衡不下来的，可以与之讨论或者找其他人一同评审
+使用 `maxmemory-policy` 进行配置即可,另外提一下就是`volatile-lru`, `volatile-random` 
+和 `volatile-ttl` 使用策略的前提都是需要有expire集合，key有时效性的，若是没有满足的key，
+就和`noeviction`策略一样。
 
-#### 安全方面
+### 如何选取剔除key的策略
 
-- 检查是否有常见的缺陷；
-- 不好配置、缺少日志事件等；
-- 若不能确认，可以找安全专家协同处理；
+1. 首选 allkeys-lru, 请求时幂律分布的或者你不确定的时候；
+2. allkeys-random ：遍历key存在周期性或者均匀分布访问key
+3. volatile-ttl： 若使用了时效性的key，可以选此策略’
 
-#### Comments: 简洁, 友好, 可行
+### 近似的LRU算法
 
-- 评论需要简洁明了，针对代码，而不是开发者；
-- 不清楚的地方，提出来，不要忽略了；
-- 切记使用占有性语句，比如你的代码存在bug、我之前的代码是可以工作的，给你改得不行了；或者一无是处的语句，比如：这根本不会工作
-- 区别出建议和讨论的评论，如有必要更为深层次指出问题；
-- 若需要再次评论，请指出；
+考虑到CPU的占用率，Redis并没有全局找出最近未使用的Key，而是采用近似的LRU算法，工作原理概述如下：
 
-#### 提交者如何回应评审人
+1. 根据配置的淘汰策略来抽取数据集中的数据，多少是由配置的采样样本值决定的
+2. 然后从样本数据中删除最近未使用的key
 
-* 不要拒绝评审者的意见，对于任何一个评论都需要认真对待，即便你不认同的；
-* 回应每一个comment，解释你所做决定的理由；
-* 若你不认同其观点，可以进行实时沟通或者找第三方观点；
-* 提交到同一个分支，每次处理一个comment的。
+选取删除key时，采样配置：`maxmemory-samples 5` 或者使用配置命令：`CONFIG SET maxmemory-samples <count>`
 
-#### 代码评审示例
+### LFU 模式
 
-代码评审的注释格式：`//R:....`
+redis4.0版本引入一个新的淘汰算法模式：LFU（Least Frequently Used）,根据请求数据量，采用了近似计数器的算法计算key的使用数。
+同样也是需要采样计数的。由于需要对大量key做计数采样，所以需要一定的延迟时间。
 
-1. 名字不一致性
-
-```Java
-class MyClass {
-  private int countTotalPageVisits; //R: name variables consistently
-  private int uniqueUsersCount;
-}
-```
-
-2. 函数签名不一致性
-
-```Java
-interface MyInterface {
-  /** Returns {@link Optional#empty} if s cannot be extracted. */
-  public Optional<String> extractString(String s);
-
-/** Returns null if {@code s} cannot be rewritten. */
-  //R: should harmonize return values: use Optional<> here, too
-  public String rewriteString(String s);
-}
-```
-
-3. 库使用
-
-```Java
-//R: remove and replace by Guava's MapJoiner
-String joinAndConcatenate(Map<String, String> map, String keyValueSeparator, String keySeparator);
-```
-
-4. 个人品味
-
-```Java
-int dayCount; //R: nit: I usually prefer numFoo over fooCount; up to you, but we should keep it consistent in this project
-```
-
-5. Bugs
-
-```Java
-//R: This performs numIterations+1 iterations, is that intentional?
-//   If it is, consider changing the numIterations semantics?
-for (int i = 0; i <= numIterations; ++i) {
-  ...
-}
-```
-
-架构疑虑
-
-```Java
- //R: I think we should avoid the dependency on OtherService. 
- // Can we discuss this in person?
-otherService.call();
-```
-
----
-
-### Tip：暂缺
-
----
-
-### Share：Redis持久化之AOF模式
-
-#### 什么是AOF模式
-
-以追加文件的方式将写命令写入文件，保存数据状态。
-
-#### AOF模式的优缺点
-
-|优点|缺点|  
-|---|---|
-|追加方式写文件  | 对于相同大小的数据集，AOF方式比RDB方式耗费时间更多 |   
-|多种写文件的方式，并自动重写AOF文件  | AOF恢复数据起来比RDB要慢 |
-|会将写命令连续记录，易于解析文件 |  AOF文件过大时，一旦遇到I/O阻塞，可能无法恢复数据|
-
-
-#### AOF模式的工作原理
-
-- Redis服务器调用fork，生成一个子进程
-- Redis子进程写一个新的AOF文件
-- Redis服务器将写的命令缓存与内存buffer中，同时写旧的AOF文件
-- 当Redis子进程写完AOF文件后，Redis服务器会得到一个信号，并将之前缓存的写命令传给子进程
-- 更改旧AOF的文件名，并开始将内存的写命令写入新文件中
-
-#### AOF重写
-
-随着Redis服务器的运行，不断写命令会写入AOF文件，使其会变得越来越大，占用的磁盘会越来越多。若发生故障，恢复数据时，执行AOF中的内容，占用的时间也会很多。重写操作触发两种方式：
-
-- 手动触发
-
-在Redis客户端执行 `bgrewriteaof`, Redis服务器接收到之后会创建一个子进程读取AOF文件，并将重复的命令剔除。
-
-- 配置方式
+配置采样信息：
 
 ```
-auto-aof-rewrite-percentage 100
-auto-aof-rewrite-min-size 60mb
+lfu-log-factor 10
+lfu-decay-time 1
 ```
 
-#### AOF模式的配置示例
+两种淘汰策略：
 
-```
-appendonly yes
-appendfsync everysec
-no-appendfync-on-rewrite no
-auto-aof-rewrite-percentage 100
-auto-aof-rewrite-min-size 60mb
-```
+- `volatile-lfu`:在 expire集合中使用LFU算法，删除KEY
+- `allkeys-lfu`: 对于所有的key，采用LFU算法
 
-其中，
-
-- `auto-aof-rewrite-percentage` 和 `auto-aof-rewrite-min-size` 控制AOF重写，
-例子中表示重写之后AOF最小是60mb，超过上一次重写文件的一倍就会触发重写操作；
-
-- `appendfsync` 与两个关键的系统调用:`write`和`fsync`有关。有三个选项：
-    + `no`:系统决定何时同步，不推荐使用。不在主动调用fsync，系统会在每30s执行一次内核的缓存到disk中；
-    + `everysec`:每秒钟将写命令写入文件中，每秒调用write和fsync；如果disk拷贝的速度比write还要慢
-    Redis会保证在2s之内将写命令写入文件；
-    + `always`:一旦有写命令就将其写入文件中，write和fsync是一个组合操作，类似于组提交
+【TODO 看了两遍的Wikipedia，仍旧没看太明太明白，所以以后看懂在更新。】
 
 
-#### 参考资料
+### 参考资料
 
-- [《Redis实战》](https://book.douban.com/subject/26612779/)
-- [Redis Persistenc](https://redis.io/topics/persistence)
-- [Redis persistence demystified](http://oldblog.antirez.com/post/redis-persistence-demystified.html)
+1. [Redis LRU](https://redis.io/topics/lru-cache)
+2. [Morris counter](https://en.wikipedia.org/wiki/Approximate_counting_algorithm)
 
-----
+-------
