update share section

--- a/arts-2018-12-16.md
+++ b/arts-2018-12-16.md
@@ -143,7 +143,7 @@ public boolean containsNearbyDuplicate(int[] nums, int k) {
 
 --------------
 
-## Share：Redis中得LRU淘汰算法
+## Share：Redis中的LRU淘汰算法
 
 ### 概述
 
@@ -190,7 +190,7 @@ public boolean containsNearbyDuplicate(int[] nums, int k) {
 1. 根据配置的淘汰策略来抽取数据集中的数据，多少是由配置的采样样本值决定的
 2. 然后从样本数据中删除最近未使用的key
 
-选取删除key时，采样配置：`maxmemory-samples 5` 或者使用配置命令：`CONFIG SET maxmemory-samples <count>`
+选取删除key时，采样配置：`maxmemory-samples 5` 或者使用配置命令：`CONFIG SET maxmemory-samples <count>`。**注意设置的采样值不能太高，虽然高会逼近真实的LRU算法，但是所耗费的CPU也是相当高的，建议是 5**。
 
 ### LFU 模式
 
