review a log paper

--- a/alg/array_and_string/1_8.md
+++ b/alg/array_and_string/1_8.md
@@ -5,3 +5,23 @@
 假设你有一个isSubstring函数，可以检测一个字符串是否是另一个字符串的子串。 给出字符串s1和s2，只使用一次isSubstring就能判断s2是否是s1的旋转字符串， 请写出代码。旋转字符串：”waterbottle”是”erbottlewat”的旋转字符串。
 
 ## 解答
+
+这里的解法比较巧妙，将`s1`划分为`x+y`,且`s2=yx`;那么`yx`就是`xyxy`的子串。
+
+```Java
+public boolean isRotation(String s1, String s2) {
+    if (s1 == null || s2 == null) {
+        return false;
+    }
+    if (s1.length() != s2.length()) {
+        return false;
+    }
+    // s1=xy;s2=yx; s3=xyxy=s1s1, s2 is substring of s1s1
+    String dupS1 = s1 + s1;
+    return isSubString(dupS1, s2);
+}
+
+private boolean isSubString(String s1, String s2) {
+    return s1.indexOf(s2) > 0 ? true : false;
+}
+```
